[package]
name = "webhooks"
authors.workspace = true
edition.workspace = true
version.workspace = true
license-file = "../../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Internal dependencies
appstate.workspace = true
auth.workspace = true
common.workspace = true
db.workspace = true
error.workspace = true

# External dependencies
axum.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]

[lints]
workspace = true
