[package]
name = "webhooks"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
# Internal dependencies
appstate.workspace = true
auth.workspace = true
common.workspace = true
db.workspace = true
error.workspace = true

# External dependencies
axum.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
hyper.workspace = true
settings.workspace = true
tower.workspace = true

[lints]
workspace = true
