[package]
name = "kellnr-db-testcontainer"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
publish = false # Dev dependency for testing, do not publish

[dependencies]
quote.workspace = true
syn.workspace = true

[lib]
proc-macro = true
