[package]
name = "kellnr-entity"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
sea-orm.workspace = true
uuid.workspace = true

[lints]
workspace = true
