[package]
name = "kellnr-migration"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
# Internal dependencies
kellnr-common.workspace = true
kellnr-settings.workspace = true

# External dependencies
async-std = { version = "^1", features = ["attributes", "tokio1"] }
chrono.workspace = true
sea-orm-migration.workspace = true
sea-orm.workspace = true
sea-query.workspace = true
serde.workspace = true
serde_json.workspace = true
sha256.workspace = true
tracing.workspace = true

[lints.rust]
unused_imports = "allow"
