[package]
authors = ["Alice <a@example.com>", "Bob <b@example.com>"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
description = "Use all the TOML fields!"
edition = "2021"
homepage = "https://serde.rs/"
keywords = ["gamedev", "graphics"]
license = "MIT OR Apache-2.0"
name = "full-toml"
publish = ["kellnr-test"]
readme = "README.md"
repository = "https://github.com/rust-lang/cargo/"
rust-version = "1.57"
version = "1.0.0"

[features]
bmp = []
default = ["ico", "webp"]
ico = ["bmp", "png"]
png = []
webp = []

[badges]
maintenance = {status = "actively-developed"}
mybadge = {hello = "world"}

[dependencies]
bindgen = "0.59.2"
bitflags = "1.3.2"
cfg-if = "1.0.0"
getrandom = "0.2.3"
quote = "1.0.10"
regex = "1.4.1"
serde = {version = "1.0", features = ["derive"]}
unicode-xid = "0.2.2"

[dev-dependencies]
bae = "0.1.7"
rand = "0.8.4"

[build-dependencies]
gloo-timers = "0.2.0"
three-d = "0.8.0"

[workspace]
