[package]
authors = ["secana <stefan.hausotte@gmx.de>"]
description = "Test hyphens in crate names, now with more dependencies!"
edition = "2021"
name = "foo-bar"
publish = ["kellnr-local"]
version = "1.0.0"

[dependencies]
regex = "1.4.1"
serde = {version = "1.0", features = ["derive"]}
test_lib = {version = "1.0", registry = "kellnr-local"}
unicode-xid = "0.2.2"

[dev-dependencies]
bae = "0.1.7"

[build-dependencies]
gloo-timers = "0.2.0"

[workspace]
